--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html ng-app="messageBoard" lang="en">
   <head>
+    <base href="/">	    
+    <meta charset="utf-8">
+    <!--script src="https://code.jquery.com/jquery-2.1.4.min.js"></script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.5.0-beta.2/angular.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.5.0-beta.2/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.5.0-beta.2/angular-animate.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="./stylesheets/style.css" rel="stylesheet">
+    <script src="./javascripts/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body ng-controller="PostController as post">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -22,19 +28,41 @@
       <form method="post" name="post_form">
         <div class="form-group">
 
-            <input type = 'textarea' maxlength="30" id ="name_field" class="form-control status-box" rows="1" placeholder="Tell me your name!">
-            <input type = 'textarea' id = "message_field" class="form-control status-box" rows="2" placeholder="What's on your mind?">
+            <input type="textarea" id="name_field" maxlength="30" ng-model="name" class="form-control status-box" rows="1" placeholder="Tell me your name!">
+            <input type="textarea" id="message_field" ng-model="message" class="form-control status-box" rows="2" placeholder="What's on your mind?">
         </div>
       </form>
       <div class="button-group pull-right">
         <p class="counter">140</p>
-        <a href="#" id="send_btn" class="btn btn-primary">Post</a>
+        <a href="#" ng-click="addNewPost(name,message)" class="btn btn-mine">Post</a>
       </div>
 
       <ul id="posts" class="posts">
+        <li ng-repeat="post in posts | orderBy:'-id' track by post.id ">
+            <div class="username row">
+                <strong>@{{post.name}}</strong>
+            </div>
+            <p class="lead">{{post.message}}</p>
+            <div class="indicators">
+            <span ng-click=likePost(post.id) class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+	    <span class="indicator">{{post.likes}}</span>
+	    <span  class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+	    <span class="indicator">{{post.comments.length}}</span>
+            </div>
+            <hr>
+	    <div>
+                <h4>Comments:</h4>
+                <ul class="list-group">
+                    <li class="list-group-item" ng-repeat="comment in post.comments track by $index">{{comment}}</li>
+                </ul>
+            </div>
+                <div class="input-group">
+                    <input type = "textarea" class="form-control custom-control" rows="3" style="resize:none" placeholder="Write a comment." ng-model="comment">
+                    <a ng-click="commentOnPost(post.id,comment);comment = null" class="input-group-addon btn btn-primary">Send</a>
+                </div>
+	</li> 
       </ul>
     </div>
-    <script src="./javascripts/app.js"></script>
 
   </body>
 </html>
