--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="col-xs-12 col-md-6 col-sm-8 col-sm-offset-2 col-md-offset-3">
       <form method="post" name="post_form">
         <div class="form-group">
 
