--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html ng-app="messageBoard" lang="en">
   <head>
     <base href="/">	    
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">     
     <meta charset="utf-8">
-    <!--script src="https://code.jquery.com/jquery-2.1.4.min.js"></script-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://code.angularjs.org/1.5.0-beta.2/angular.min.js"></script>
     <script type="text/javascript" src="https://code.angularjs.org/1.5.0-beta.2/angular-route.min.js"></script>
@@ -12,7 +14,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link href="./stylesheets/style.css" rel="stylesheet">
     <script src="./javascripts/app.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body ng-controller="PostController as post">
     <nav class="navbar navbar-default">
@@ -41,6 +42,7 @@
         <li ng-repeat="post in posts | orderBy:'-id' track by post.id ">
             <div class="username row">
                 <strong>@{{post.name}}</strong>
+                <small class="pull-right ng-binding">{{post.date | date:'yyyy.MM.dd HH:mm'}}</small>
             </div>
             <p class="lead">{{post.message}}</p>
             <div class="indicators">
